---
source: src/config/tests.rs
expression: conf
---
Config {
    projects: [
        Project {
            name: "example",
            lib: LibPackage {
                name: "example",
                rel_dir: ".",
                wasm_file: SourcedSiteFile {
                    source: "target/front/wasm32-unknown-unknown/debug/example.wasm",
                    dest: "target/site/pkg/example.wasm",
                    site: "pkg/example.wasm",
                },
                js_file: SiteFile {
                    dest: "target/site/pkg/example.js",
                    site: "pkg/example.js",
                },
                features: [
                    "hydrate",
                ],
                default_features: false,
                output_name: "example",
                src_paths: "src",
                profile: Debug,
                ..
            },
            bin: BinPackage {
                name: "example",
                rel_dir: ".",
                exe_file: "target/debug/example",
                target: "example",
                features: [
                    "ssr",
                ],
                default_features: false,
                src_paths: "src",
                profile: Debug,
                ..
            },
            style: StyleConfig {
                file: Some(
                    SourcedSiteFile {
                        source: "style/main.scss",
                        dest: "target/site/pkg/example.css",
                        site: "pkg/example.css",
                    },
                ),
                browserquery: "defaults",
                tailwind: Some(
                    TailwindConfig {
                        input_file: "style/tailwind.css",
                        config_file: "tailwind.config.js",
                        tmp_file: "target/tmp/tailwind.css",
                    },
                ),
                site_file: SiteFile {
                    dest: "target/site/pkg/example.css",
                    site: "pkg/example.css",
                },
            },
            watch: true,
            release: false,
            precompress: false,
            hot_reload: false,
            site: Site {
                addr: 127.0.0.1:3000,
                reload: 127.0.0.1:3001,
                root_dir: "target/site",
                pkg_dir: "pkg",
                file_reg: {},
                ext_file_reg: {},
            },
            end2end: Some(
                 {
                    cmd: "npx playwright test",
                    dir: "end2end",
                },
            ),
            assets: Some(
                AssetsConfig {
                    dir: "assets",
                },
            ),
            ..
        },
    ],
    cli: Opts {
        release: false,
        precompress: false,
        hot_reload: false,
        project: None,
        features: [],
        lib_features: [],
        lib_cargo_args: None,
        bin_features: [],
        bin_cargo_args: None,
        cargo_locked: false,
        cargo_offline: false,
        cargo_frozen: false,
        verbose: 0,
    },
    watch: true,
    ..
}
